assets/css/style.css
/* ... */
.services-content h2,
.services-content h3 span {
	margin-bottom: 2px;
}

.services-content h3 span:last-child {
	margin-bottom: 0;
}

.services-content p {
	margin-top: 0;
}

.services-content ul {
	margin-top: 30px;
}

.services-content li {
	margin-bottom: 10px;
}

.services-content li p {
	margin-top: 0;
}

.services-content li:last-child {
	margin-bottom: 0;
}

.expertise-img-box {
	width: 100%;
}

.expertise p {
	margin-top: 10px;
}

.expertise {
	margin-top: 20px;
}

@media only screen and (max-width: 999px) {
	
	.services-content p {
		margin-top: 30px;
	}
	
}

/*--------------------------------------------------------------
18. Progress bar
--------------------------------------------------------------*/
.progress-container .container ,
.progress-container .six-columns {
	position: static;
}

.progress-bg {
	position: absolute;
	width: 50%;
	height: 100%;
	left: 0;
	top: 0;
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
	z-index: 0;
}

.progress-box {
    position: relative;
    overflow: hidden;
    margin-bottom: 20px;
}

.progress-box:last-child {
    margin-bottom: 0;
}

.progress-box div {
	font-size: 12px;
}

.progress-counter {
    position: absolute;
    top: 0px;
    right: 0px;
    display: block;
    margin-right: 0px;
}

.progress-zero {
    position: relative;
    overflow: hidden;
    height: 1px;
    margin-top: 6px;
    background: rgba(250,250,250,.1);
}

.progress-full {
    position: absolute;
    left: 0px;
    top: 0px;
    height: 1px;
    width: 0;
    background-color: white;
    z-index: 2;
}

.progress-full.progress-full-red {
    background-color: #ef0d33;
    z-index: 3;
}

.slide-progress{ 
    -webkit-animation-name: slide-progress; 
        animation-name: slide-progress;
    -webkit-animation-duration: 1.7s;
        animation-duration: 1.7s;
    -webkit-animation-timing-function: cubic-bezier(.225, 1, .316, .99);
        animation-timing-function: cubic-bezier(.225, 1, .316, .99);
}

@-webkit-keyframes slide-progress {
	 
    0% { 
        -webkit-transform: translateX(-100%); 
            transform: translateX(-100%); 
    }
     
    100% {  
        -webkit-transform: translateX(0);  
            transform: translateX(0); 
    }
     
}

@keyframes slide-progress {
	 
    0% { 
        -webkit-transform: translateX(-100%); 
            transform: translateX(-100%); 
    }
     
    100% {  
        -webkit-transform: translateX(0);  
            transform: translateX(0); 
    }
     
} 

@media only screen and (max-width: 767px) {
	
	.progress-container .six-columns,
	.progress-container .container {
		position: relative;
	}
	
	.progress-bg {
		position: static;
		width: 100%;
		height: 100vh;
	}
	
}

/*--------------------------------------------------------------
19. Portfolio
--------------------------------------------------------------*/
.portfolio-content .portfolio-content-inner {
	min-height: 70vh;
}

.portfolio-content .six-columns,
.portfolio-content .container {
	position: static;
}

.portfolio-content-bg-box {
	position: absolute;
	width: 50%;
	height: 100%;
	left: 50%;
	top: 0;
	display: inline-block;
	z-index: 2;
}

.reverse .portfolio-content-bg-box {
	left: 0;
}

.portfolio-content-bg {
	width: 100%;
	height: 100%;
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
}

.portfolio-content h2 span,
.portfolio-content span {
	margin-bottom: 2px;
}

.portfolio-content h2 span:last-child {
	margin-bottom: 0;
}

@media only screen and (max-width: 767px) {
	
	.portfolio-content .six-columns,
	.portfolio-content .container {
		position: relative;
	}
	
	.portfolio-content-bg-box {
		position: static;
		width: 100%;
		left: 0;
	}
	
	.portfolio-content-bg {
		height: 100vh;
	}
	
}

/*--------------------------------------------------------------
20. Project
--------------------------------------------------------------*/
.project-content p {
	margin-top: 0;
}

.project-content li {
	margin-top: 13px;
}

.project-content h2,
.project-content2 h2 {
	line-height: 1.5;
}

.project-content2 {
	-webkit-box-align: end;
	    -ms-flex-align: end;
	        align-items: flex-end;
}

.project-quot h5 {
	line-height: 2;
}

.project-quot h5 span {
	font-weight: 300;
}

@media only screen and (max-width: 767px) {
	
	.project-quot h5 {
		text-align: center;
	}
	
	.project-quot blockquote {
		margin-bottom: 30px;
	}
	
}

/*--------------------------------------------------------------
21. About
--------------------------------------------------------------*/
.about-page p {
	margin-top: 0;
}

.about-page ul li {
	margin-top: 10px;
}

.about-page ul li p {
	line-height: 1.3;
	margin-top: 0;
}

@media only screen and (max-width: 767px) {
	
	.about-page p {
		margin-top: 30px;
	}
	
}

/* 21.1. Team */
.team-img-box {
	width: 100%;
}

.team-content p {
	margin-top: 10px;
}

.team-content {
	margin-top: 20px;
}

.team-title-box h2,
.team-title-box h3 span {
	margin-bottom: 2px;	
}

.team-title-box h3 span:last-child {
	margin-bottom: 0;
}

/*--------------------------------------------------------------
22. Our clients
--------------------------------------------------------------*/
.client-list {
  	-webkit-box-align: center;
  	    -ms-flex-align: center;
  	        align-items: center;
  	width: 100%;
}

.client-list li {
    -ms-flex-preferred-size: 25%;
        flex-basis: 25%;
    text-align: center;
    height: 220px;
}

.client-list li a {
    display: -webkit-box;
    	display: -ms-flexbox;
    		display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    border-bottom: 1px solid #888888;
    border-right: 1px solid #888888;
    height: 100%;
    -webkit-box-sizing: border-box;
        box-sizing: border-box;
}
      
.client-list li:nth-child(4n) a {
	border-right: none;
}
/* ... */

